--- a/src/main/resources/templates/client/homepage/show.html
+++ b/src/main/resources/templates/client/homepage/show.html
@@ -62,12 +62,12 @@
       <!--? slider Area Start-->
       <div th:replace="client/layout/subtitle"></div>
       <!-- Courses area start -->
-      <div class="courses-area section-padding40 fix">
+      <div class="courses-area fix mt-5" style="margin-bottom: 90px">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
-              <div class="section-tittle text-center mb-55">
-                <h2>Our featured courses</h2>
+              <div class="section-tittle text-center">
+                <h2>khóa học nổi bật</h2>
               </div>
             </div>
           </div>
@@ -239,12 +239,12 @@
 
       <!-- About Area End -->
       <!--? top subjects Area Start -->
-      <div class="topic-area section-padding40">
+      <div class="topic-area mt-5" style="margin-bottom: 30px">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
-              <div class="section-tittle text-center mb-55">
-                <h2>Explore top subjects</h2>
+              <div class="section-tittle text-center">
+                <h2>Khám phá các chủ đề hàng đầu</h2>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
                   <img src="/img/gallery/topic1.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Toán</a></h3>
                     </div>
                   </div>
                 </div>
@@ -267,7 +267,7 @@
                   <img src="/img/gallery/topic2.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Lí</a></h3>
                     </div>
                   </div>
                 </div>
@@ -279,7 +279,7 @@
                   <img src="/img/gallery/topic3.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Hóa</a></h3>
                     </div>
                   </div>
                 </div>
@@ -291,65 +291,18 @@
                   <img src="/img/gallery/topic4.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Anh</a></h3>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic5.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic6.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic7.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic8.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            
           </div>
           <div class="row justify-content-center">
             <div class="col-xl-12">
-              <div class="section-tittle text-center mt-20">
-                <a href="courses.html" class="border-btn">View More Subjects</a>
+              <div class="section-tittle text-center">
+                <a href="courses.html" class="border-btn">Xem thêm chủ đề</a>
               </div>
             </div>
           </div>
@@ -369,7 +322,7 @@
             <!-- section tittle -->
             <div class="section-tittle section-tittle2 mb-20">
               <div class="front-text">
-                <h2 class="">Learner outcomes on courses you will take</h2>
+                <h2 class="">Kết quả bạn đạt được sau khóa học</h2>
               </div>
             </div>
             <div class="single-features">
@@ -378,8 +331,7 @@
               </div>
               <div class="features-caption">
                 <p>
-                  Techniques to engage effectively with vulnerable children and
-                  young people.
+                  Nắm vững kiến thức cốt lõi và kỹ năng thực hành để áp dụng ngay.
                 </p>
               </div>
             </div>
@@ -389,8 +341,7 @@
               </div>
               <div class="features-caption">
                 <p>
-                  Join millions of people from around the world learning
-                  together.
+                  Rèn luyện tư duy logic, phản xạ nhanh qua hệ thống đề thi thử sát thực tế.
                 </p>
               </div>
             </div>
@@ -400,8 +351,7 @@
               </div>
               <div class="features-caption">
                 <p>
-                  Join millions of people from around the world learning
-                  together. Online learning is as easy and natural.
+                  Tự tin chinh phục các kỳ thi và đạt kết quả cao.
                 </p>
               </div>
             </div>
