--- a/src/main/resources/templates/client/layout/footer.html
+++ b/src/main/resources/templates/client/layout/footer.html
@@ -3,72 +3,75 @@
   <div class="footer-area footer-padding">
     <div class="container">
       <div class="row justify-content-between">
+        <!-- Cột 1: Logo và giới thiệu -->
         <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
           <div class="single-footer-caption mb-50">
             <div class="single-footer-caption mb-30">
-              <!-- logo -->
+              <!-- Logo -->
               <div class="footer-logo mb-25">
-                <a href="index.html"
-                  ><img src="/img/logo/logo2_footer.png" alt=""
-                /></a>
+                <a href="index.html">
+                  <img src="/img/logo/logo2_footer.png" alt="Logo trang web" />
+                </a>
               </div>
               <div class="footer-tittle">
                 <div class="footer-pera">
                   <p>
-                    The automated process starts as soon as your clothes go into
-                    the machine.
+                    Nền tảng học tập và thi trực tuyến giúp bạn dễ dàng tiếp cận
+                    kiến thức mọi lúc, mọi nơi.
                   </p>
                 </div>
               </div>
-              <!-- social -->
+              <!-- Mạng xã hội -->
               <div class="footer-social">
                 <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://bit.ly/sai4ull"
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
               </div>
             </div>
           </div>
         </div>
+
+        <!-- Cột 2: Giải pháp -->
         <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
           <div class="single-footer-caption mb-50">
             <div class="footer-tittle">
-              <h4>Our solutions</h4>
+              <h4>Giải pháp của chúng tôi</h4>
               <ul>
-                <li><a href="#">Design & creatives</a></li>
-                <li><a href="#">Telecommunication</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Programing</a></li>
-                <li><a href="#">Architecture</a></li>
+                <li><a href="#">Thi thử trực tuyến</a></li>
+                <li><a href="#">Khóa học luyện thi</a></li>
+                <li><a href="#">Chứng chỉ & chứng nhận</a></li>
               </ul>
             </div>
           </div>
         </div>
+
+        <!-- Cột 3: Hỗ trợ -->
         <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
           <div class="single-footer-caption mb-50">
             <div class="footer-tittle">
-              <h4>Support</h4>
+              <h4>Hỗ trợ</h4>
               <ul>
-                <li><a href="#">Design & creatives</a></li>
-                <li><a href="#">Telecommunication</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Programing</a></li>
-                <li><a href="#">Architecture</a></li>
+                <li><a href="#">Câu hỏi thường gặp</a></li>
+                <li><a href="#">Liên hệ hỗ trợ</a></li>
+                <li><a href="#">Hướng dẫn sử dụng</a></li>
+                <li><a href="#">Chính sách hoàn tiền</a></li>
+                <li><a href="#">Bảo mật thông tin</a></li>
               </ul>
             </div>
           </div>
         </div>
+
+        <!-- Cột 4: Về chúng tôi -->
         <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
           <div class="single-footer-caption mb-50">
             <div class="footer-tittle">
-              <h4>Company</h4>
+              <h4>Về chúng tôi</h4>
               <ul>
-                <li><a href="#">Design & creatives</a></li>
-                <li><a href="#">Telecommunication</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Programing</a></li>
-                <li><a href="#">Architecture</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Đội ngũ giảng viên</a></li>
+                <li><a href="#">Tin tức - Sự kiện</a></li>
+                <li><a href="#">Đối tác</a></li>
+                <li><a href="#">Tuyển dụng</a></li>
               </ul>
             </div>
           </div>
@@ -85,13 +88,13 @@
             <div class="footer-copy-right text-center">
               <p>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
+                Bản quyền &copy;
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This template is made with
-                <i class="fa fa-heart" aria-hidden="true"></i> by
-                <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                Bảo lưu mọi quyền | trang này được tạo
+                <i class="fa fa-heart" aria-hidden="true"></i> bởi
+                <a href="https://colorlib.com" target="_blank">nhóm CNPM</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
