--- a/src/main/resources/templates/client/layout/subtitle.html
+++ b/src/main/resources/templates/client/layout/subtitle.html
@@ -8,19 +8,19 @@
             <div class="col-xl-6 col-lg-7 col-md-12">
               <div class="hero__caption">
                 <h1 data-animation="fadeInLeft" data-delay="0.2s">
-                  Online learning<br />
-                  platform
+                  Nền Tảng Thi và<br />
+                  Học Trực Tuyến
                 </h1>
                 <p data-animation="fadeInLeft" data-delay="0.4s">
-                  Build skills with courses, certificates, and degrees online
-                  from world-class universities and companies
+                  Xây dựng kỹ năng với các khóa học, chứng chỉ và bằng cấp trực
+                  tuyến từ các trường đại học và công ty đẳng cấp thế giới
                 </p>
                 <a
-                  href="#"
+                  href="/course"
                   class="btn hero-btn"
                   data-animation="fadeInLeft"
                   data-delay="0.7s"
-                  >Join for Free</a
+                  >Tham gia miễn phí</a
                 >
               </div>
             </div>
@@ -39,8 +39,11 @@
               <img src="/img/icon/icon1.svg" alt="" />
             </div>
             <div class="features-caption">
-              <h3>60+ UX courses</h3>
-              <p>The automated process all your website tasks.</p>
+              <h3>60+ khóa học</h3>
+              <p>
+                Khám phá hơn 60 khóa học thuộc nhiều lĩnh vực từ cơ bản đến nâng
+                cao.
+              </p>
             </div>
           </div>
         </div>
@@ -50,8 +53,11 @@
               <img src="/img/icon/icon2.svg" alt="" />
             </div>
             <div class="features-caption">
-              <h3>Expert instructors</h3>
-              <p>The automated process all your website tasks.</p>
+              <h3>Giảng viên là chuyên gia</h3>
+              <p>
+                Đội ngũ giảng viên dày dặn kinh nghiệm, luôn sẵn sàng đồng hành
+                cùng bạn.
+              </p>
             </div>
           </div>
         </div>
@@ -61,8 +67,11 @@
               <img src="/img/icon/icon3.svg" alt="" />
             </div>
             <div class="features-caption">
-              <h3>Life time access</h3>
-              <p>The automated process all your website tasks.</p>
+              <h3>Truy cập trọn đời</h3>
+              <p>
+                Học bất cứ lúc nào, không giới hạn thời gian hay số lần truy
+                cập.
+              </p>
             </div>
           </div>
         </div>
