--- a/src/main/resources/templates/client/course/course.html
+++ b/src/main/resources/templates/client/course/course.html
@@ -108,12 +108,12 @@
       </section>
 
       <!-- Courses area start -->
-      <div class="courses-area section-padding40 fix">
+      <div class="courses-area mt-5 fix" style="margin-bottom: 70px">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
-              <div class="section-tittle text-center mb-55">
-                <h2>Our featured courses</h2>
+              <div class="section-tittle text-center">
+                <h2>Khóa học</h2>
               </div>
             </div>
           </div>
@@ -361,7 +361,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
-              <div class="section-tittle text-center mt-40">
+              <div class="section-tittle text-center">
                 <a href="#" class="border-btn">Load More</a>
               </div>
             </div>
@@ -370,12 +370,12 @@
       </div>
       <!-- Courses area End -->
       <!--? top subjects Area Start -->
-      <div class="topic-area">
+      <div class="topic-area mt-5" style="margin-bottom: 50px">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8">
-              <div class="section-tittle text-center mb-55">
-                <h2>Explore top subjects</h2>
+              <div class="section-tittle text-center">
+                <h2>Chủ đề</h2>
               </div>
             </div>
           </div>
@@ -386,7 +386,7 @@
                   <img src="/img/gallery/topic1.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Toán</a></h3>
                     </div>
                   </div>
                 </div>
@@ -398,7 +398,7 @@
                   <img src="/img/gallery/topic2.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Lí</a></h3>
                     </div>
                   </div>
                 </div>
@@ -410,7 +410,7 @@
                   <img src="/img/gallery/topic3.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Hóa</a></h3>
                     </div>
                   </div>
                 </div>
@@ -422,55 +422,7 @@
                   <img src="/img/gallery/topic4.png" alt="" />
                   <div class="topic-content-box">
                     <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic5.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic6.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic7.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="single-topic text-center mb-30">
-                <div class="topic-img">
-                  <img src="/img/gallery/topic8.png" alt="" />
-                  <div class="topic-content-box">
-                    <div class="topic-content">
-                      <h3><a href="#">Programing</a></h3>
+                      <h3><a href="#">Anh</a></h3>
                     </div>
                   </div>
                 </div>
@@ -479,8 +431,8 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-xl-12">
-              <div class="section-tittle text-center mt-20">
-                <a href="courses.html" class="border-btn">View More Subjects</a>
+              <div class="section-tittle text-center">
+                <a href="courses.html" class="border-btn">Xem Chủ Đề</a>
               </div>
             </div>
           </div>
@@ -488,153 +440,9 @@
       </div>
       <!-- top subjects End -->
       <!-- ? services-area -->
-      <div class="services-area services-area2 section-padding40">
-        <div class="container">
-          <div class="row justify-content-sm-center">
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="single-services mb-30">
-                <div class="features-icon">
-                  <img src="/img/icon/icon1.svg" alt="" />
-                </div>
-                <div class="features-caption">
-                  <h3>60+ UX courses</h3>
-                  <p>The automated process all your website tasks.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="single-services mb-30">
-                <div class="features-icon">
-                  <img src="/img/icon/icon2.svg" alt="" />
-                </div>
-                <div class="features-caption">
-                  <h3>Expert instructors</h3>
-                  <p>The automated process all your website tasks.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-              <div class="single-services mb-30">
-                <div class="features-icon">
-                  <img src="/img/icon/icon3.svg" alt="" />
-                </div>
-                <div class="features-caption">
-                  <h3>Life time access</h3>
-                  <p>The automated process all your website tasks.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </main>
     <footer>
-      <div class="footer-wrappper footer-bg">
-        <!-- Footer Start-->
-        <div class="footer-area footer-padding">
-          <div class="container">
-            <div class="row justify-content-between">
-              <div class="col-xl-4 col-lg-5 col-md-4 col-sm-6">
-                <div class="single-footer-caption mb-50">
-                  <div class="single-footer-caption mb-30">
-                    <!-- logo -->
-                    <div class="footer-logo mb-25">
-                      <a href="index.html"
-                        ><img src="/img/logo/logo2_footer.png" alt=""
-                      /></a>
-                    </div>
-                    <div class="footer-tittle">
-                      <div class="footer-pera">
-                        <p>
-                          The automated process starts as soon as your clothes
-                          go into the machine.
-                        </p>
-                      </div>
-                    </div>
-                    <!-- social -->
-                    <div class="footer-social">
-                      <a href="#"><i class="fab fa-twitter"></i></a>
-                      <a href="https://bit.ly/sai4ull"
-                        ><i class="fab fa-facebook-f"></i
-                      ></a>
-                      <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
-                <div class="single-footer-caption mb-50">
-                  <div class="footer-tittle">
-                    <h4>Our solutions</h4>
-                    <ul>
-                      <li><a href="#">Design & creatives</a></li>
-                      <li><a href="#">Telecommunication</a></li>
-                      <li><a href="#">Restaurant</a></li>
-                      <li><a href="#">Programing</a></li>
-                      <li><a href="#">Architecture</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
-                <div class="single-footer-caption mb-50">
-                  <div class="footer-tittle">
-                    <h4>Support</h4>
-                    <ul>
-                      <li><a href="#">Design & creatives</a></li>
-                      <li><a href="#">Telecommunication</a></li>
-                      <li><a href="#">Restaurant</a></li>
-                      <li><a href="#">Programing</a></li>
-                      <li><a href="#">Architecture</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-                <div class="single-footer-caption mb-50">
-                  <div class="footer-tittle">
-                    <h4>Company</h4>
-                    <ul>
-                      <li><a href="#">Design & creatives</a></li>
-                      <li><a href="#">Telecommunication</a></li>
-                      <li><a href="#">Restaurant</a></li>
-                      <li><a href="#">Programing</a></li>
-                      <li><a href="#">Architecture</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- footer-bottom area -->
-        <div class="footer-bottom-area">
-          <div class="container">
-            <div class="footer-border">
-              <div class="row d-flex align-items-center">
-                <div class="col-xl-12">
-                  <div class="footer-copy-right text-center">
-                    <p>
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      Copyright &copy;
-                      <script>
-                        document.write(new Date().getFullYear());
-                      </script>
-                      All rights reserved | This template is made with
-                      <i class="fa fa-heart" aria-hidden="true"></i> by
-                      <a href="https://colorlib.com" target="_blank"
-                        >Colorlib</a
-                      >
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Footer End-->
-      </div>
+      <div th:replace="client/layout/footer"></div>
     </footer>
     <!-- Scroll Up -->
     <div id="back-top">
