--- a/src/main/resources/templates/client/auth/login.html
+++ b/src/main/resources/templates/client/auth/login.html
@@ -106,6 +106,7 @@
                   class="form-control form-control-lg"
                   placeholder="Enter a valid email address"
                   name="username"
+                  autocomplete="off"
                 />
                 <label class="form-label">Email address</label>
               </div>
