--- a/src/main/resources/templates/client/exam/startexam.html
+++ b/src/main/resources/templates/client/exam/startexam.html
@@ -263,7 +263,7 @@
                   type="button"
                   id="confirmSubmitBtn"
                 >
-                  🚨 Nộp bài
+                  Nộp bài
                 </button>
               </form>
             </div>
