--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -39,6 +39,12 @@
               </div>
               Test
             </a>
+            <a class="nav-link" href="/admin/course">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              Course
+            </a>
           </div>
         </div>
       </div>
